# timecast

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  __init__.py  environment.yml  setup.cfg  setup.py
.github/azure/: test.yml
.github/workflows/: build.yml  nightly.yml  pypi.yml
docs/: conf.py  index.rst  modules.rst  timecast.learners.rst  timecast.optim.rst  timecast.rst
modules/: core.py
optim/: __init__.py
scripts/: download_data.sh
series/: _core.py  lstm.py  random.py
tests/: __init__.py
tests/series/: __init__.py  test_series.py
tests/utils/: __init__.py  test_ar.py  test_experiment.py  test_externalize.py  test_gram.py  test_internalize.py  test_pcr.py  test_random.py  test_statistics.py
timecast/: __init__.py
timecast/modules/: __init__.py  _ar.py  _linear.py  _predict_constant.py  _predict_last.py  core.py
timecast/optim/: _multiplicative_weights.py  _norm_threshold.py  _sgd.py
timecast/series/: __init__.py  arma.py  core.py  crypto.py  enso.py  lds.py  rnn.py  sp500.py  uci.py  unemployment.py
timecast/utils/: __init__.py  experiment.py  pcr.py  statistics.py
utils/: ar.py  gram.py
