# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[bumpversion]
current_version = 0.3.1
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]

[bumpversion:file:docs/conf.py]

[flake8]
select = B,C,E,F
max-line-length = 100
max-complexity = 15

[run]
omit = 
	setup.py

[report]
exclude_lines = 
	@abstractmethod
	raise NotImplementedError

[pylint]
load-plugins = 
	pylint.extensions.docparams,
	pylint.extensions.docstyle
disable = 
	fixme,
	bad-continuation

