[bumpversion]
current_version = 0.4.0
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]

[bumpversion:file:docs/conf.py]

[flake8]
select = B,C,E,F
max-line-length = 100
max-complexity = 15

[run]
omit = 
	setup.py

[report]
exclude_lines = 
	@abstractmethod
	raise NotImplementedError

[pylint]
load-plugins = 
	pylint.extensions.docparams,
	pylint.extensions.docstyle
disable = 
	fixme,
	bad-continuation

